--- a/index.html
+++ b/index.html
@@ -59,16 +59,43 @@
                 <h1>Experience</h1>
                 <h5>2022</h5>
             </div>
-            <div class="element">
+            <div class="element element-last">
                 <img src="./images/hudu.png" alt="">
                 <h1>Hudu</h1>
                 <h5>2022</h5>
             </div>
-            <div class="element element-last">
+            <!-- <div class="element element-last">
                 <h1>Hudu</h1>
                 <h5>2022</h5>
-            </div>
+            </div> -->
 
+        </div>
+
+        <div id="about">
+            <!-- <div id="image-about"></div> -->
+            <img src="./images/cynthia.png" alt="">
+            <div id="text-about">
+                <h5>(About Me)</h5>
+                <p>I'm a product designer with a passion for creating products that not only look good but also solve real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix series or playing video games. My design philosophy is simple: make it visually appealing, functional, and bring a smile to people's faces. I'm the designer you want on your team if you want to make people say 'I need that in my life!'.</p>
+                <a href="">Let's talk</a>
+            </div>
+        </div>
+
+        <div id="subscribe">
+            <h5>(forgot to mention)</h5>
+            <h3>subscribe to my youtube channel
+                <i class="ri-arrow-right-up-line"></i>
+            </h3>
+        </div>
+
+        <div id="footer">
+            <div id="footer-left">
+                <h5>2024 &copy;</h5>
+                <h5>6:15 M EST</h5>
+            </div>
+            <div id="footer-right">
+                <a href="3">dribble</a><a href="#">instagram</a><a href="#">twitter</a><a href="#">linkedin</a>
+            </div>
         </div>
     </div>
 </body>
