--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <div id="second">
 
             <div class="element">
-                <img src="./images/plug.png" alt="">
+                <img src="./images/plug.png" alt="" class="image">
                 <h1>The plug</h1>
                 <h5>2022</h5>
             </div>
             <div class="element">
-                <img src="./images/ixperience.png" alt="">
+                <img src="./images/ixperience.png" alt="" class="image">
                 <h1>Experience</h1>
                 <h5>2022</h5>
             </div>
             <div class="element element-last">
-                <img src="./images/hudu.png" alt="">
+                <img src="./images/hudu.png" alt="" class="image">
                 <h1>Hudu</h1>
                 <h5>2022</h5>
             </div>
